--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
     "next": "15.3.4",
     "react": "^19.0.0",
